[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Boran Car", email = "boran.car@gmail.com"},
]
dependencies = [
    "flask~=2.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
